adding width of item tab

--- a/style.css
+++ b/style.css
@@ -29,6 +29,8 @@
               height: 50px;
               background-color: #CFADFD;
               border: none;
+              width: 100%;
+              float: left;
              
           }
 
